website: home: Fix contrast issue in video boxes.
This commit changes the white text on yellow background when hovering
over the featured video boxes to conform to WCAG 2.0 Level AA
guidelines. Instead, only the title of the video is changed to yellow
on hover.

* website/static/media/css/video-preview.css: New style sheet.
* website/static/base/css/elements.css (video): New rule set.
* website/static/base/css/index.css:
  (.video-preview): Move to the new video preview style sheet.
* website/apps/base/templates/home.scm:
  (home-t): Use the new video and video preview styles.
* website/apps/media/templates/components.scm:
  (video-preview): Use new video preview style.
  (video->shtml): Use the new video style instead of the style defined
  for the .video-preview class.

--- a/website/static/base/css/elements.css
+++ b/website/static/base/css/elements.css
@@ -88,3 +88,11 @@ td {
 th {
     background-color: #F5F5F5;
 }
+
+video {
+    border-color: black;
+    border-style: solid;
+    border-width: thin;
+    box-shadow: 0 0 4px black;
+    max-width: 100%;
+}
